[tool.poetry]
name = "github-contrib-api"
version = "0.1.0"
description = "Use the GitHub REST API to collect statistics on GitHub contributions"
authors = ["Jeongseop Lim <jseoplim@gmail.com>"]
maintainers = ["Jeongseop Lim <jseoplim@gmail.com>"]
readme = "README.md"
repository = "https://github.com/jseop-lim/github-contrib-api"
license = "MIT"
packages = [
    { include = "github_contrib_api", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.10 <3.12"
aiohttp = "^3.9.3"
typer = {extras = ["all"], version = "^0.9.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
isort = "^5.13.2"
tox = "^4.11.4"
flake8 = "^6.1.0"
pytest-cov = "^4.1.0"
black = "^23.12.0"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Lint Configurations
[tool.isort]
profile = "black"
line_length = 88

[tool.black]
preview = true
line-length = 88
target-version = ['py310', 'py311']

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
testpaths = [
    "tests",
]
